paperless/paperless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless-web-service
spec:
  selector:
    app: paperless-web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
