paperless/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis-service
spec:
  selector:
    app: paperless-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
